--- a/index.html
+++ b/index.html
@@ -5,73 +5,8 @@
     <meta charset="UTF-8">
     <title>Currículum - Jose Manuel Teruel Moreno</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            background: #fff;
-            padding: 30px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        header {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 20px;
-            margin-bottom: 30px;
-        }
-        header h1 {
-            margin: 0;
-            color: #2c3e50;
-        }
-        header h2 {
-            margin: 5px 0 0;
-            font-weight: normal;
-            color: #666;
-        }
-        .contacto {
-            text-align: right;
-            font-size: 0.9em;
-        }
-        section {
-            margin-bottom: 30px;
-        }
-        section h3 {
-            border-left: 4px solid #3498db;
-            padding-left: 10px;
-            color: #2c3e50;
-        }
-        .item {
-            margin-bottom: 20px;
-        }
-        .item h4 {
-            margin: 0;
-        }
-        .item span {
-            font-size: 0.9em;
-            color: #777;
-        }
-        ul {
-            padding-left: 20px;
-        }
-        @media (max-width: 600px) {
-            header {
-                flex-direction: column;
-            }
-            .contacto {
-                text-align: left;
-                margin-top: 15px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 
