--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 <body>
 
 <div class="container">
+    <aside>
+        lol
+
+    </aside>
+
+    <div class="info">
     <header>
         <div>
             <h1>Jose Manuel Teruel Moreno</h1>
@@ -85,6 +91,8 @@
             <li>Inglés – Avanzado</li>
         </ul>
     </section>
+    </div>
+
 </div>
 
 </body>
